Source code link added

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           Source Code Github:
           <a
             class="text-dark"
-            href="https://github.com/manavsehgal9876"
+            href="https://github.com/manavsehgal9876/ms-slider"
             target="_blank"
             >Click here</a
           >
